fixed display font size on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -32,7 +32,7 @@ body{
     display: flex;
     align-items: center;
     justify-content:flex-end;
-    font-size: 4vw;
+    font-size: 10vw;
     
 
 }
